[gd_scene load_steps=11 format=2]

[ext_resource path="res://script/ExitButton.gd" type="Script" id=1]
[ext_resource path="res://script/MainMenu.gd" type="Script" id=2]
[ext_resource path="res://script/Settings.gd" type="Script" id=4]
[ext_resource path="res://script/MenuBackButton.gd" type="Script" id=5]
[ext_resource path="res://script/FPS.cs" type="Script" id=6]
[ext_resource path="res://script/VSyncToggle.gd" type="Script" id=7]
[ext_resource path="res://script/WindowedFullscreen.gd" type="Script" id=8]
[ext_resource path="res://script/WindowMode.gd" type="Script" id=9]

[sub_resource type="Theme" id=1]
VBoxContainer/constants/separation = 13

[sub_resource type="ButtonGroup" id=2]
resource_name = "WindowMode"

[node name="MainMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )

[node name="Control" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 40.0
margin_top = 40.0
margin_right = -40.0
margin_bottom = -40.0

[node name="Main" type="VBoxContainer" parent="MarginContainer"]
margin_right = 944.0
margin_bottom = 570.0
theme = SubResource( 1 )
alignment = 1

[node name="Sprite" type="Sprite" parent="MarginContainer/Main"]

[node name="StartButton" type="Button" parent="MarginContainer/Main"]
margin_top = 242.0
margin_right = 944.0
margin_bottom = 262.0
text = "Start"

[node name="RestartButton" type="Button" parent="MarginContainer/Main"]
visible = false
margin_top = 258.0
margin_right = 944.0
margin_bottom = 278.0
text = "Restart"

[node name="Settings Button" type="Button" parent="MarginContainer/Main"]
margin_top = 275.0
margin_right = 944.0
margin_bottom = 295.0
text = "Settings"

[node name="ExitButton" type="Button" parent="MarginContainer/Main"]
margin_top = 308.0
margin_right = 944.0
margin_bottom = 328.0
text = "Quit"
script = ExtResource( 1 )

[node name="Settings" type="VBoxContainer" parent="MarginContainer"]
visible = false
margin_right = 944.0
margin_bottom = 570.0
theme = SubResource( 1 )
script = ExtResource( 4 )

[node name="BackButton" type="Button" parent="MarginContainer/Settings"]
margin_right = 944.0
margin_bottom = 20.0
text = "Back"
script = ExtResource( 5 )

[node name="VSyncToggle" type="CheckBox" parent="MarginContainer/Settings"]
margin_top = 33.0
margin_right = 944.0
margin_bottom = 57.0
pressed = true
text = "VSync"
script = ExtResource( 7 )

[node name="FPSToggle" type="CheckBox" parent="MarginContainer/Settings"]
margin_top = 70.0
margin_right = 944.0
margin_bottom = 94.0
text = "FPS Counter"

[node name="WindowMode" type="VBoxContainer" parent="MarginContainer/Settings"]
margin_top = 107.0
margin_right = 944.0
margin_bottom = 232.0
script = ExtResource( 9 )

[node name="Label" type="Label" parent="MarginContainer/Settings/WindowMode"]
margin_right = 944.0
margin_bottom = 14.0
text = "Window Mode:"

[node name="Fullscreen" type="CheckBox" parent="MarginContainer/Settings/WindowMode"]
margin_top = 27.0
margin_right = 944.0
margin_bottom = 51.0
group = SubResource( 2 )
text = "Fullscreen"

[node name="Windowed Fullscreen" type="CheckBox" parent="MarginContainer/Settings/WindowMode"]
margin_top = 64.0
margin_right = 944.0
margin_bottom = 88.0
group = SubResource( 2 )
text = "Windowed Fullscreen"
script = ExtResource( 8 )

[node name="Windowed" type="CheckBox" parent="MarginContainer/Settings/WindowMode"]
margin_top = 101.0
margin_right = 944.0
margin_bottom = 125.0
pressed = true
group = SubResource( 2 )
text = "Windowed"

[node name="VBoxContainer" type="HBoxContainer" parent="MarginContainer/Settings"]
margin_top = 245.0
margin_right = 944.0
margin_bottom = 319.0

[node name="Label" type="Label" parent="MarginContainer/Settings/VBoxContainer"]
margin_right = 53.0
margin_bottom = 74.0
size_flags_vertical = 5
text = "Volume:"

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/Settings/VBoxContainer"]
margin_left = 57.0
margin_right = 940.0
margin_bottom = 74.0
size_flags_horizontal = 3

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/Settings/VBoxContainer/VBoxContainer"]
margin_right = 883.0
margin_bottom = 16.0

[node name="Label" type="Label" parent="MarginContainer/Settings/VBoxContainer/VBoxContainer/HBoxContainer"]
margin_top = 1.0
margin_right = 44.0
margin_bottom = 15.0
text = "Master"

[node name="HSlider" type="HSlider" parent="MarginContainer/Settings/VBoxContainer/VBoxContainer/HBoxContainer"]
margin_left = 48.0
margin_right = 883.0
margin_bottom = 16.0
size_flags_horizontal = 3
value = 100.0

[node name="HBoxContainer2" type="HBoxContainer" parent="MarginContainer/Settings/VBoxContainer/VBoxContainer"]
margin_top = 29.0
margin_right = 883.0
margin_bottom = 45.0

[node name="Label" type="Label" parent="MarginContainer/Settings/VBoxContainer/VBoxContainer/HBoxContainer2"]
margin_top = 1.0
margin_right = 38.0
margin_bottom = 15.0
text = "Music"

[node name="HSlider" type="HSlider" parent="MarginContainer/Settings/VBoxContainer/VBoxContainer/HBoxContainer2"]
margin_left = 42.0
margin_right = 883.0
margin_bottom = 16.0
size_flags_horizontal = 3
value = 100.0

[node name="HBoxContainer3" type="HBoxContainer" parent="MarginContainer/Settings/VBoxContainer/VBoxContainer"]
margin_top = 58.0
margin_right = 883.0
margin_bottom = 74.0

[node name="Label" type="Label" parent="MarginContainer/Settings/VBoxContainer/VBoxContainer/HBoxContainer3"]
margin_top = 1.0
margin_right = 42.0
margin_bottom = 15.0
text = "Effects"

[node name="HSlider" type="HSlider" parent="MarginContainer/Settings/VBoxContainer/VBoxContainer/HBoxContainer3"]
margin_left = 46.0
margin_right = 883.0
margin_bottom = 16.0
size_flags_horizontal = 3
value = 100.0

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/Settings/VBoxContainer"]
margin_left = 944.0
margin_right = 944.0
margin_bottom = 74.0

[node name="FPS" type="Label" parent="."]
visible = false
margin_left = 40.0
margin_top = 147.0
margin_right = 984.0
margin_bottom = 161.0
text = "FPS: Loading"
script = ExtResource( 6 )

[connection signal="pressed" from="MarginContainer/Main/StartButton" to="." method="_on_StartButton_pressed"]
[connection signal="pressed" from="MarginContainer/Main/RestartButton" to="." method="_on_RestartButton_pressed"]
[connection signal="pressed" from="MarginContainer/Main/Settings Button" to="." method="_on_Settings_Button_pressed"]
[connection signal="pressed" from="MarginContainer/Main/ExitButton" to="MarginContainer/Main/ExitButton" method="_on_ExitButton_pressed"]
[connection signal="pressed" from="MarginContainer/Settings/BackButton" to="." method="_on_BackButton_pressed"]
[connection signal="toggled" from="MarginContainer/Settings/VSyncToggle" to="MarginContainer/Settings" method="_on_VSyncToggle_toggled"]
[connection signal="toggled" from="MarginContainer/Settings/FPSToggle" to="FPS" method="SetCheckingFPS"]
[connection signal="pressed" from="MarginContainer/Settings/WindowMode/Fullscreen" to="MarginContainer/Settings/WindowMode" method="_on_Fullscreen_pressed"]
[connection signal="pressed" from="MarginContainer/Settings/WindowMode/Windowed Fullscreen" to="MarginContainer/Settings/WindowMode" method="_on_Windowed_Fullscreen_pressed"]
[connection signal="pressed" from="MarginContainer/Settings/WindowMode/Windowed" to="MarginContainer/Settings/WindowMode" method="_on_Windowed_pressed"]
[connection signal="HideFPS" from="FPS" to="." method="_on_FPS_HideFPS"]
[connection signal="WriteFPS" from="FPS" to="." method="_on_FPS_WriteFPS"]
